# MRAS

./: .gitignore  .gitmodules  ADXL375_8h_source.html  ADXL375__constants_8h_source.html  ADXL375__register_8h_source.html  AccelerometerDataMsg_8h_source.html  ArduinoBuzzer_8h_source.html  ArduinoTextLogger_8h_source.html  Atmosphere_8h_source.html  BarometerDataMsg_8h_source.html  BuzzerInterface_8h_source.html  CMakeLists.txt  Doxyfile  FakeAccelerometer_8h_source.html  FakeBarometer_8h_source.html  GNSSDataMsg_8h_source.html  GroundSDLogger_8h_source.html  GroundTelemetrySystem_8h_source.html  GyroDataMsg_8h_source.html  LinearKalmanFilter_8h_source.html  MRAS__Config_8h_source.html  MRAS__System_8h_source.html  MagnetometerDataMsg_8h_source.html  NativeDataLogger_8h_source.html  NativeTextLogger_8h_source.html  QueueTelemetryMessageMsg_8h_source.html  README.md  RadioStatusMsg_8h_source.html  ReceivedTelemetryMessageMsg_8h_source.html  RocketSDLogger_8h_source.html  RocketTelemetrySystem_8h_source.html  SDLogger_8h_source.html  Sensor__ADXL375_8h_source.html  Sensor__LIS3MDL_8h_source.html  Sensor__LSM6DSO32_8h_source.html  Sensor__MS5607_8h_source.html  Sensor__ZOEM8Q_8h_source.html  SimulinkDataLogger_8h_source.html  StateEstimatorMsg_8h_source.html  StateEstimator_8h_source.html  (+450 more)
lib/: CMakeLists.txt  common.h  example.cc
lib/ArduinoCommon/: protobuf_util.h  protobuf_utill.cpp
lib/ArduinoDataLogger/: ArduinoDataLogger.cpp  ArduinoDataLogger.h
lib/ArduinoTextLogger/: ArduinoTextLogger.h
lib/EventDetectors/: LaunchDetector.cpp  LaunchDetector.h  README.md
(+354 files in other folders)
